--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -9,7 +9,8 @@
         "from classify import data_pipeline\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from functools import reduce"
+        "from functools import reduce\n",
+        "import pandas as pd"
       ]
     },
     {
@@ -25,8 +26,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = data_pipeline(\"rzepa\")\n",
-        "df.drop(columns=['vectorized'], inplace=True)"
+        "#df = data_pipeline(\"rzepa\")\n",
+        "#df.drop(columns=['vectorized'], inplace=True)\n",
+        "#df.to_csv(\"data_all.csv\")\n",
+        "\n",
+        "df = pd.read_csv(\"data_all.csv\", index_col = 'id')"
       ]
     },
     {
@@ -42,7 +46,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Filter I"
+        "## Filter I - general good"
       ]
     },
     {
@@ -52,9 +56,24 @@
       "outputs": [],
       "source": [
         "def filter_by_conditions(df, condition_list):\n",
+        "    condition_list.append(df['Rank'].isna())\n",
         "    selection_mask = reduce(lambda x, y: x & y, condition_list)\n",
         "    df.loc[selection_mask, 'Rank'] = 'Test'\n",
-        "    return df[selection_mask]"
+        "    print(len(df[selection_mask]))\n",
+        "    if len(df[selection_mask]) > 100:\n",
+        "        print('Saving')\n",
+        "        df[selection_mask].sample(100).to_csv(\"data_test.csv\")\n",
+        "    else:\n",
+        "        df[selection_mask].to_csv(\"data_test.csv\")\n",
+        "    return df\n",
+        "\n",
+        "def approve(df, name):\n",
+        "    df.loc[df['Rank'] == 'Test', 'Rank'] = name\n",
+        "    return df\n",
+        "\n",
+        "def restore(df):\n",
+        "    df.loc[df['Rank'] == 'Test', 'Rank'] = None\n",
+        "    return df"
       ]
     },
     {
@@ -64,23 +83,11 @@
       "outputs": [],
       "source": [
         "condition_list = []\n",
-        "condition_list.append(df['ngram_sum_squared_to_total'] > 1)\n",
-        "condition_list.append(df['proba'] > 0.9)\n",
-        "condition_list.append(df['weak_count'] < 0.9)\n",
-        "condition_list.append(df['words'].apply(len) > 2)\n",
-        "condition_list.append(df['Rank'].isna())\n",
+        "condition_list.append(df['ngram_sum_squared_to_total'] > 0.75)\n",
+        "condition_list.append(df['proba'] > 0.5)\n",
+        "condition_list.append(df['weak_count'] < 0.5)\n",
         "\n",
-        "df_selected = filter_by_conditions(df, condition_list)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df_sample = df_selected.sample(100)\n",
-        "df_sample.to_csv(\"data.csv\")"
+        "df = filter_by_conditions(df, condition_list)"
       ]
     },
     {
@@ -90,14 +97,103 @@
       "outputs": [],
       "source": [
         "# Approved\n",
-        "df.loc[df['Rank'] == 'Test', 'Rank'] = 'Filter1'"
+        "df = approve(df, \"Filter1\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Filter II"
+        "## Filter II - high ngrams"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "condition_list = [df['weak_count']  < 0.3,\n",
+        "                  df['ngram_sum_squared_to_total'] > 0.5,\n",
+        "                  df['num_words'] > 2,\n",
+        "                  df['proba'] > 0.5]\n",
+        "df = filter_by_conditions(df, condition_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = approve(df, 'Filter2')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Filter III - klimat count"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['klimat_count'] = df['ngram_sum'] * df['klimat']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "condition_list = [\n",
+        "    df['klimat_count'] > 2,\n",
+        "    df['ngram_sum_squared_to_total'] > 0.33,\n",
+        "]\n",
+        "df = filter_by_conditions(df, condition_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = approve(df, \"Filter3\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Filter 4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "condition_list = [\n",
+        "    df['klimat_count'] > 0,\n",
+        "    df['proba'] > 0.8,\n",
+        "    df['weak_count'] < 0.5,\n",
+        "    df['num_words'] > 2\n",
+        "    ]\n",
+        "df = filter_by_conditions(df, condition_list)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Left"
       ]
     },
     {
@@ -107,9 +203,7 @@
       "outputs": [],
       "source": [
         "df_left = df[df['Rank'].isna()]\n",
-        "condition_list = [df_left['weak_count']  < 0.3,\n",
-        "                  df_left['ngram_sum_squared_to_total'] > 1]\n",
-        "df_selected = filter_by_conditions(df_left, condition_list)"
+        "len(df_left)"
       ]
     },
     {
@@ -118,17 +212,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "sns.jointplot(df_selected, x = 'weak_count', y = 'ngram_sum_squared')\n",
-        "plt.yscale('log')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df_selected.sample(100).to_csv('data.csv')"
+        "df[~df['Rank'].isna()].to_csv('eco_rzepa.csv')"
       ]
     }
   ],
