Colab notebooks put together

--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,14 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from classify import data_pipeline\n",
+        "from classify import data_pipeline, eco_selector, reduce, approve, filter_by_conditions\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from functools import reduce\n",
         "import pandas as pd"
       ]
     },
@@ -17,36 +16,39 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Rzepa"
+        "# Standard Corpuses"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "dict_keys(['rzepa', 'gpc', 'newsweek', 'wprost', 'dorzeczy', 'polityka', 'wyborcza', 'wpolityce'])"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#df = data_pipeline(\"rzepa\")\n",
-        "#df.drop(columns=['vectorized'], inplace=True)\n",
-        "#df.to_csv(\"data_all.csv\")\n",
-        "\n",
-        "df = pd.read_csv(\"data_all.csv\", index_col = 'id')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df['Rank'] = None"
+        "corps_standard = ['rzepa', 'gpc', 'newsweek', 'polityka', 'wyborcza', 'wprost']\n",
+        "for corp in corps_standard:\n",
+        "    df = data_pipeline(corp)\n",
+        "    df.drop(columns=['vectorized'], inplace=True)\n",
+        "    df_eco = eco_selector(df)\n",
+        "    df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Filter I - general good"
+        "# Special Corpuses"
       ]
     },
     {
@@ -55,164 +57,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def filter_by_conditions(df, condition_list):\n",
-        "    condition_list.append(df['Rank'].isna())\n",
-        "    selection_mask = reduce(lambda x, y: x & y, condition_list)\n",
-        "    df.loc[selection_mask, 'Rank'] = 'Test'\n",
-        "    print(len(df[selection_mask]))\n",
-        "    if len(df[selection_mask]) > 100:\n",
-        "        print('Saving')\n",
-        "        df[selection_mask].sample(100).to_csv(\"data_test.csv\")\n",
-        "    else:\n",
-        "        df[selection_mask].to_csv(\"data_test.csv\")\n",
-        "    return df\n",
-        "\n",
-        "def approve(df, name):\n",
-        "    df.loc[df['Rank'] == 'Test', 'Rank'] = name\n",
-        "    return df\n",
-        "\n",
-        "def restore(df):\n",
-        "    df.loc[df['Rank'] == 'Test', 'Rank'] = None\n",
-        "    return df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "condition_list = []\n",
-        "condition_list.append(df['ngram_sum_squared_to_total'] > 0.75)\n",
-        "condition_list.append(df['proba'] > 0.5)\n",
-        "condition_list.append(df['weak_count'] < 0.5)\n",
-        "\n",
-        "df = filter_by_conditions(df, condition_list)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Approved\n",
-        "df = approve(df, \"Filter1\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Filter II - high ngrams"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "condition_list = [df['weak_count']  < 0.3,\n",
-        "                  df['ngram_sum_squared_to_total'] > 0.5,\n",
-        "                  df['num_words'] > 2,\n",
-        "                  df['proba'] > 0.5]\n",
-        "df = filter_by_conditions(df, condition_list)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df = approve(df, 'Filter2')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Filter III - klimat count"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df['klimat_count'] = df['ngram_sum'] * df['klimat']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "condition_list = [\n",
-        "    df['klimat_count'] > 2,\n",
-        "    df['ngram_sum_squared_to_total'] > 0.33,\n",
-        "]\n",
-        "df = filter_by_conditions(df, condition_list)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df = approve(df, \"Filter3\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Filter 4"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "condition_list = [\n",
-        "    df['klimat_count'] > 0,\n",
-        "    df['proba'] > 0.8,\n",
-        "    df['weak_count'] < 0.5,\n",
-        "    df['num_words'] > 2\n",
-        "    ]\n",
-        "df = filter_by_conditions(df, condition_list)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Left"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df_left = df[df['Rank'].isna()]\n",
-        "len(df_left)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df[~df['Rank'].isna()].to_csv('eco_rzepa.csv')"
+        "corps_special = ['dorzeczy', 'wpolityce']"
       ]
     }
   ],
