special treatment of dorzeczy and wpolityce

--- a/Classification/Tagging.ipynb
+++ b/Classification/Tagging.ipynb
@@ -186,13 +186,16 @@
     "  df = df.fillna(\"None\")\n",
     "  return df\n",
     "\n",
-    "def get_resulting_df(links, rf):\n",
+    "def get_resulting_df(links, rf, corpus):\n",
     "    result = []\n",
     "    for link in tqdm(links):\n",
     "       result.append(naive_filter(link, rf))\n",
     "    df_result = pd.concat(result).set_index('id')\n",
-    "    df_result = df_result[df_result['proba'] > 0.1]\n",
-    "    return df_result\n",
+    "    if corpus in ['dorzeczy', 'wpolityce']:\n",
+    "      print(\"Special\")\n",
+    "      return df_result\n",
+    "    else:\n",
+    "      return df_result[df_result['proba'] > 0.1]\n",
     "\n",
     "def get_statistics(df_result):\n",
     "    for i, key in enumerate(stat_list[::-1]):\n",
