--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,62 +2,56 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "from classify import data_pipeline, eco_selector, reduce, approve, filter_by_conditions\n",
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import sys"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Standard Corpuses"
+        "# Rzepa"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "dict_keys(['rzepa', 'gpc', 'newsweek', 'wprost', 'dorzeczy', 'polityka', 'wyborcza', 'wpolityce'])"
-            ]
-          },
-          "execution_count": 1,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "rzepa\n",
+            "Configuration finished\n",
+            "Dataset of 14082 samples\n",
+            "0    8468\n",
+            "1    5614\n",
+            "Name: label, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9971611071682044\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 44/44 [01:24<00:00,  1.92s/it]\n"
+          ]
         }
       ],
       "source": [
-        "corps_standard = ['rzepa', 'gpc', 'newsweek', 'polityka', 'wyborcza', 'wprost']\n",
-        "for corp in corps_standard:\n",
-        "    df = data_pipeline(corp)\n",
-        "    df.drop(columns=['vectorized'], inplace=True)\n",
-        "    df_eco = eco_selector(df)\n",
-        "    df_eco.to_csv(f\"eco_{corp}.csv\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Special Corpuses"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "corps_special = ['dorzeczy', 'wpolityce']"
+        "corp = 'rzepa'\n",
+        "df = data_pipeline(corp)\n",
+        "df_eco = eco_selector(df)\n",
+        "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     }
   ],
@@ -79,7 +73,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
