--- a/Classification/Tagging.ipynb
+++ b/Classification/Tagging.ipynb
@@ -8,20 +8,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L7xcqUYs9L9s",
-        "outputId": "9aeb5447-0003-46d4-f688-4e5f53212129"
+        "outputId": "56e9f079-cddd-4805-a691-24093b801300"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "2023-11-13 09:21:10.933938: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-            "2023-11-13 09:21:10.939026: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-            "2023-11-13 09:21:10.939119: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2023-11-13 09:21:13.422804: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "2023-11-15 17:49:35.296589: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "2023-11-15 17:49:35.301959: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2023-11-15 17:49:35.302033: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2023-11-15 17:49:39.037192: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
             "Collecting pl-core-news-sm==3.6.0\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.6.0/pl_core_news_sm-3.6.0-py3-none-any.whl (20.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.2/20.2 MB\u001b[0m \u001b[31m51.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.2/20.2 MB\u001b[0m \u001b[31m54.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: spacy<3.7.0,>=3.6.0 in /usr/local/lib/python3.10/dist-packages (from pl-core-news-sm==3.6.0) (3.6.1)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.10/dist-packages (from spacy<3.7.0,>=3.6.0->pl-core-news-sm==3.6.0) (3.0.12)\n",
             "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from spacy<3.7.0,>=3.6.0->pl-core-news-sm==3.6.0) (1.0.5)\n",
@@ -52,9 +52,11 @@
             "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /usr/local/lib/python3.10/dist-packages (from thinc<8.2.0,>=8.1.8->spacy<3.7.0,>=3.6.0->pl-core-news-sm==3.6.0) (0.1.3)\n",
             "Requirement already satisfied: click<9.0.0,>=7.1.1 in /usr/local/lib/python3.10/dist-packages (from typer<0.10.0,>=0.3.0->spacy<3.7.0,>=3.6.0->pl-core-news-sm==3.6.0) (8.1.7)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->spacy<3.7.0,>=3.6.0->pl-core-news-sm==3.6.0) (2.1.3)\n",
+            "Installing collected packages: pl-core-news-sm\n",
+            "Successfully installed pl-core-news-sm-3.6.0\n",
             "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
             "You can now load the package via spacy.load('pl_core_news_sm')\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -198,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {
         "id": "_RH-HEaA9L9y"
       },
@@ -254,7 +256,7 @@
         "    for link in tqdm(links):\n",
         "       result.append(naive_filter(link, rf))\n",
         "    df_result = pd.concat(result).set_index('id')\n",
-        "    if len(df_result) < 5 * 10 ** 4:\n",
+        "    if len(df_result) < 5 * 10 ** 4  and corpus != \"dorzeczy\":\n",
         "      return df_result\n",
         "    else:\n",
         "      print(f\"{corpus}: {len(df_result)}\")\n",
@@ -285,40 +287,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PFyAj2of9L9z",
-        "outputId": "81a939e6-015d-4de7-d91a-73a216e186ec"
+        "outputId": "ccbf4d23-c642-4229-b5e4-17a102655de8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Done: newsweek\n",
             "Done: rzepa\n",
             "Done: gpc\n",
-            "Processing: wprost\n",
+            "Done: wprost\n",
+            "Done: polityka\n",
+            "Processing: dorzeczy\n",
             "1.0\n"
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "100%|██████████| 1/1 [06:18<00:00, 378.92s/it]\n"
+            "100%|██████████| 1/1 [08:44<00:00, 524.70s/it]\n"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "(268, 437, 191)\n",
-            "Done: polityka\n",
-            "Done: dorzeczy\n",
+            "dorzeczy: 11795\n",
+            "(688, 290, 243)\n",
             "Done: wyborcza\n",
             "Done: wpolityce\n"
           ]
@@ -336,7 +339,7 @@
         "    rf = get_model(df)\n",
         "    df_result = get_resulting_df(links, rf, corpus)\n",
         "    get_statistics(df_result)\n",
-        "    df_result, df_eco, df_non_eco = determine_fate(df_result)\n",
+        "    df_result, df_eco, df_non_eco = determine_fate(df_result, corpus)\n",
         "    save(corpus, df_result, df_eco, df_non_eco)\n",
         "\n",
         "\n",
