--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,16 +2,34 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "from classify import data_pipeline, eco_selector\n",
         "from resources.get_data import get_current_data\n",
         "from resources.setup import get_setup\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import sys"
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def validator(df):\n",
+        "    df = df.drop_duplicates()\n",
+        "    df = df[~df['text'].isna()]\n",
+        "    df['text'] = df['text'].astype(str)\n",
+        "    if 'vectorized' in df.columns.values:\n",
+        "        df = df.drop(columns=['vectorized'])\n",
+        "    if df.index.duplicated().any():\n",
+        "        df = df.reset_index()\n",
+        "        df = df.drop(columns = ['id'])\n",
+        "        df = df.rename(columns = {'index': 'id'})\n",
+        "    print(f\"Found {len(df)} files\")\n",
+        "    return df"
       ]
     },
     {
@@ -30,13 +48,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "rzepa\n",
+            "Configuration finished\n",
+            "Dataset of 14082 samples\n",
+            "0    8468\n",
+            "1    5614\n",
+            "Name: label, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9971611071682044\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 44/44 [01:52<00:00,  2.56s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "21981 683\n",
+            "Found 6297 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'rzepa'\n",
-        "df = data_pipeline(corp)\n",
-        "df_eco = eco_selector(df)\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
+        "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
@@ -49,13 +99,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "wyborcza\n",
+            "Configuration finished\n",
+            "Dataset of 11694 samples\n",
+            "0    7000\n",
+            "1    4694\n",
+            "Name: label, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9965811965811966\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 31/31 [01:41<00:00,  3.28s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "15314 469\n",
+            "Found 2316 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'wyborcza'\n",
-        "df = data_pipeline(corp)\n",
-        "df_eco = eco_selector(df, True)\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
@@ -68,13 +150,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "gpc\n",
+            "Configuration finished\n",
+            "Dataset of 11696 samples\n",
+            "0    7000\n",
+            "1    4696\n",
+            "Name: label, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9982905982905983\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 16/16 [00:27<00:00,  1.70s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "7531 304\n",
+            "Found 2148 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'gpc'\n",
-        "df = data_pipeline(corp)\n",
-        "df_eco = eco_selector(df, ease=True)\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
@@ -87,13 +201,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "polityka\n",
+            "Configuration finished\n",
+            "Dataset of 18921 samples\n",
+            "0    9734\n",
+            "1    9187\n",
+            "Name: label, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9963021658742737\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 3/3 [00:09<00:00,  3.08s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1046 149\n",
+            "Found 654 files\n"
+          ]
+        }
+      ],
       "source": [
         "corp = 'polityka'\n",
-        "df = data_pipeline(corp)\n",
-        "df_eco = eco_selector(df, ease=True)\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
@@ -113,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -128,46 +274,30 @@
             "1    8757\n",
             "Name: label, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9971783295711061\n"
+            "Accuracy of model 0.9966139954853274\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 2/2 [00:05<00:00,  2.71s/it]\n"
+            "100%|██████████| 2/2 [00:06<00:00,  3.48s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "978 368\n"
+            "688 41\n",
+            "Found 331 files\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "368"
-            ]
-          },
-          "execution_count": 37,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
         "corp = 'dorzeczy'\n",
-        "df = data_pipeline(corp)\n",
-        "df_eco = eco_selector(df, True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest, ease=True)])\n",
+        "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
@@ -180,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -195,10 +325,17 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/hombre/Code/Climate Project/Classification/resources/get_data.py:7: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
             "  df_eco = pd.read_csv(drive_path / corpus / \"eco_result.csv\", index_col=['id', 'source'], parse_dates=['date'])\n",
-            "/home/hombre/Code/Climate Project/Classification/resources/get_data.py:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+            "/home/ps/Code/Climate/Classification/resources/get_data.py:8: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
             "  df_non_eco = pd.read_csv(drive_path / corpus / \"non_eco_result.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found 456 files\n"
           ]
         }
       ],
@@ -206,7 +343,9 @@
         "corp = 'wprost'\n",
         "configuration = get_setup(corp)\n",
         "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
-        "pd.concat([df_eco, df_rest.drop(index=2260)]).to_csv(f\"eco_{corp}.csv\")"
+        "df_eco = pd.concat([df_eco, df_rest.drop(index=2260)])\n",
+        "df_eco = validator(df_eco)\n",
+        "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
     {
@@ -218,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -226,7 +365,8 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "newsweek\n"
+            "newsweek\n",
+            "Found 378 files\n"
           ]
         }
       ],
@@ -235,6 +375,7 @@
         "configuration = get_setup(corp)\n",
         "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
         "df_all = pd.concat([df_rest['words'].drop(index=2051), df_eco])\n",
+        "df_eco = validator(df_eco)\n",
         "df_all.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
@@ -247,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -255,7 +396,8 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wpolityce\n"
+            "wpolityce\n",
+            "Found 398 files\n"
           ]
         }
       ],
@@ -263,70 +405,9 @@
         "corp = 'wpolityce'\n",
         "configuration = get_setup(corp)\n",
         "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
+        "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Final Processing"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 42,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "14609\n",
-            "12215235\n"
-          ]
-        }
-      ],
-      "source": [
-        "import os\n",
-        "\n",
-        "def read_and_drop_vectorized(directory_path):\n",
-        "    csv_files = [file for file in os.listdir(directory_path) if file.endswith('.csv')]\n",
-        "\n",
-        "    dataframes = []\n",
-        "    corpus_len = 0\n",
-        "    tokens = 0\n",
-        "    for csv_file in csv_files:\n",
-        "        file_path = os.path.join(directory_path, csv_file)\n",
-        "        \n",
-        "        df = pd.read_csv(file_path)\n",
-        "        if 'vectorized' in df.columns:\n",
-        "            df = df.drop(columns=['vectorized'])\n",
-        "\n",
-        "        if df.index.duplicated().any():\n",
-        "            print(f\"Warning: Duplicated index found in file {csv_file}\")\n",
-        "            df = df.reset_index()\n",
-        "            df = df.drop(columns=['id'])\n",
-        "            df = df.rename(columns={\"index\": 'id'})\n",
-        "        \n",
-        "        corpus_len += len(df)\n",
-        "        tokens += df['text'].apply(lambda x: len(x.split(\" \"))).sum()\n",
-        "        dataframes.append(df)\n",
-        "    print(corpus_len)\n",
-        "    print(tokens)\n",
-        "    return dataframes\n",
-        "\n",
-        "# Example usage:\n",
-        "directory_path = '.'\n",
-        "corpus_df = read_and_drop_vectorized(directory_path)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -347,7 +428,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
